@@ -53,6 +53,22 @@
 </tr>
 </table>
 <p>
+2004-01-26  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> wand/magick_wand.c: Updated to lastest ImageMagick API.
+
+</UL>
+<p>
+2004-01-26  Mike Chiarappa  &lt;mikechiarappa@libero.it&gt;
+
+<UL>
+  <LI> magick/stream.c: (SetPixelStream) removed "const" from definition of
+        local variable [StreamHandler stream]. Borland C++Builder compiler signal
+        error "Cannot modify a const object".
+
+</UL>
+<p>
 2004-01-25  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
