@@ -1,3 +1,7 @@
+2004-01-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* wand/magick_wand.c: Updated to lastest ImageMagick API.
+
 2004-01-26  Mike Chiarappa  <mikechiarappa@libero.it>
 
 	* magick/stream.c: (SetPixelStream) removed "const" from definition of 
